* Added velocity method for all classes derived from Orbit
* Added angularVelocity method for rotation models
* Optimized solar system rendering by maintaining a bounding sphere hierarchy
* Switched to using 2 64-bit integers for storing high precision coordinates;
  simplifies code and improves performance of operations using high precision
  coordinates (dramatically on 64-bit systems)
* Optimized creation of render lists

Scripting
* Celx scripting functions:
  - object:addreferencemark, object:removereferencemark
  - new phase object type (for timeline phases)
  - permit any X11 color name
  - showconstellations, hideconstellations, setconstellationcolor
  - getlabelcolor, getlinecolor
  - observer:makeactiveview
* Split celx scripting support into several modules
* Cel scripting
  - splitview, deleteview, singleview, setactiveview 
  - setgalaxylightgain
  - setradius
  - setlinecolor
  - setlabelcolor
  - settextureresolution
* Made the package library (except loadlib) available for celx scripting
  regardless of the ScriptSystemAccessPolicy setting
* Added an "AddonPath" value that is available to a ScriptedOrbit or
  ScriptedRotation when it is created.
* Pass control modifier to Lua keyboard handlingfunctions

Miscellaneous:
* Bound P and M keys to toggle dwarf planet and minor moon labels
* Bound U and E keys to toggle globular clusters and globular cluster labels
* Group reference mark menu items in a separate submenu
* Changed star name lookup priority in stc parser: check proper names before
  cross indices.
* Eliminated R and Shift+R key bindings for changing texture resolution
* Added new leap second 31-Dec-2008 23:59:60

Cleanup:
* Removed obsolete 'LabelledStars' section from standard celestia.cfg
* Updated README: removed obsolete sections, reorganized credits, added
  information application to 1.6.0
* Purged out of date controls documentation
* Reorganized spacecraft add-ons in standard package